<resources>
    <string name="app_name">Wardrobe</string>
    <string name="title_wardrobe">我的衣柜</string>
    <string name="title_clothesList">衣物管理</string>
    <string name="title_clothesCalendar">搭配日历</string>
    <string name="title_me">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">欢迎！</string>
    <string name="title_activity_signUp">注册</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_repasswd">Repeat your password</string>
    <string name="prompt_password">Password</string>
    <string name="action_signUp">注册</string>
    <string name="action_login">登录</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_app">衣橱管家</string>
    <string name="title_sign_up">注册</string>
    <string name="sign_up_return">返回</string>
    <string name="sign_up_submit">提交</string>
    <string name="me_sign_out">注销账号</string>
    <string name="calendar_hint">衣物搭配</string>
    <string name="container_wear_history">container</string>
    <string name="outfits">外套</string>
    <string name="uppers">上装</string>
    <string name="trousers">裤装</string>
    <string name="shoes">鞋子</string>
</resources>
