<?xml version="1.0" encoding="utf-8"?>





<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClosetFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_height="20dp"
            android:text="@string/welcome"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="20dp"
            android:text="@string/outfits"
            android:layout_gravity="center"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/outfit_recycler_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="20dp"
            android:text="@string/uppers"
            android:layout_gravity="center"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/upper_recycler_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/trousers"
            android:layout_gravity="center"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/trouser_recycler_view"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/shoes"
            android:layout_gravity="center"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/shoe_recycler_view"
        android:layout_marginBottom="80dp"/>

    </LinearLayout>
</FrameLayout>

