<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/title_sign_up"
            android:textColor="#000"
            android:textSize="23sp"
            android:typeface="monospace" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"

                android:hint="@string/prompt_email"

                android:selectAllOnFocus="true"
                />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"

                android:hint="@string/prompt_username"
                android:inputType="textPostalAddress"

                />
        </LinearLayout>



        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"

            android:hint="@string/prompt_password"

            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />



        <Button
            android:id="@+id/sign_up_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:text="@string/sign_up_submit"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"

            />

        <Button
            android:id="@+id/sign_up_return"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:text="@string/sign_up_return"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>